--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,18 +1,15 @@
 <resources>
     <string name="app_name">Game Backlog</string>
-    <string name="action_delete">Delete</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string name="add_your_game">add_your_game</string>
-    <string name="game_name">Game name</string>
-    <string name="games">Games</string>
-    <string name="see_below">See below</string>
-    <string name="action_remove">remove</string>
-    <string name="action_save">save</string>
+    <string name="clear">Clear</string>
+    <string name="platform">Platform</string>
+    <string name="title">Title</string>
+
+    <string name="month">Month</string>
+    <string name="day">Day</string>
+    <string name="year">Year</string>
+
+    <string name="releaseDate">Release: %1$s</string>
+
+    <string name="badInput">Please fill in all fields correctly</string>
 </resources>
